# AR-Filter

./: README.md  Readme.md  app.py  calibration.npz  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ARFilter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assets/: instructions.csv  main.ipynb
