[project]
name = "ARFilter"
version = "0.1.0"
requires-python = ">=3.11"
description = "AR Camera for Computer Vision"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "waitress>=3.0.2",
]
